--- a/index.html
+++ b/index.html
@@ -44,13 +44,7 @@
     </nav>
 
     <main class="container mx-auto mt-8 p-4 flex-grow">
-        <section id="download" class="bg-white rounded-lg shadow-md p-6 mb-12">
-        <h2 class="text-2xl font-semibold mb-4">Download Source Code</h2>
-        <p class="mb-4">Developers can download the C++ source code for the calculator here:</p>
-        <button id="downloadBtn" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">
-            Download calculator.cpp
-        </button>
-    </section>
+        
         <section id="home" class="mb-12">
           
             <h1 class="text-4xl font-bold mb-4">Welcome to Betake Logistics Loan Services</h1>
@@ -96,6 +90,13 @@
             <p>For more information about our loan services, please contact us:</p>
             <p>Email: loans@betakelogistics.com</p>
             <p>Phone: (+256) 750687790</p>
+        </section><br>
+        <section id="download" class="bg-white rounded-lg shadow-md p-6 mb-12">
+            <h2 class="text-2xl font-semibold mb-4">Download Source Code</h2>
+            <p class="mb-4">Developers can download the C++ source code for the calculator here:</p>
+            <button id="downloadBtn" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">
+                Download calculator.cpp
+            </button>
         </section>
     </main>
 
